# serializer version: 1
# name: TestDescribeMethod.test_add_to_static[event]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,F,81,PUBLIC,True,11,3.0957952,9,339 days,30 days,28 days 01:45:17.465614296
  
  '''
# ---
# name: TestDescribeMethod.test_add_to_static[interval]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,5,2.321928,5,255 days,13 days 14:24:00,11 days,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestDescribeMethod.test_add_to_static[state]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,2,1.0,2,364 days,1,182 days,182 days,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestDescribeMethod.test_add_to_static_single_entity[event]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,F,81,PUBLIC,True,1,0.0,1,0 days,,
  
  '''
# ---
# name: TestDescribeMethod.test_add_to_static_single_entity[interval]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,1,0.0,1,10 days,10 days,10 days,
  
  '''
# ---
# name: TestDescribeMethod.test_add_to_static_single_entity[state]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,1,0.0,1,349 days,0,349 days,349 days,
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_entity[event]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,1,0.0,1,0 days,,
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_entity[interval]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,1,0.0,1,10 days,10 days,10 days,
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_entity[state]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,1,0.0,1,349 days,0,349 days,349 days,
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_sequence[event]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,11,3.095795255000934,9,339 days,30 days,28 days 01:45:17.465614296
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_sequence[interval]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,5,2.321928094887362,5,255 days,13 days 14:24:00,11 days,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestDescribeMethod.test_describe_single_sequence[state]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,2,1.0,2,364 days,1,182 days,182 days,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestDescribeMethod.test_describe_timestep_sequence[event]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,4,2.0,4,8.5,2.5,0.5773502691896257
  
  '''
# ---
# name: TestDescribeMethod.test_describe_timestep_sequence[interval]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,3,1.584962500721156,3,8.5,2.8333333333333335,2.5,0.5773502691896257
  
  '''
# ---
# name: TestDescribeMethod.test_describe_timestep_sequence[state]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,3,1.584962500721156,3,8.5,2,2.8333333333333335,2.5,0.5773502691896257
  
  '''
# ---
# name: TestDescribeMethod.test_describe_with_aggregate[event]
  '''
  ,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  count,1.0,1.0,1.0,1,1,1
  mean,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  std,,,,,,
  min,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  25%,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  50%,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  75%,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  max,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296
  
  '''
# ---
# name: TestDescribeMethod.test_describe_with_aggregate[interval]
  '''
  ,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  count,1.0,1.0,1.0,1,1,1,1
  mean,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  std,,,,,,,
  min,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  25%,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  50%,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  75%,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  max,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestDescribeMethod.test_describe_with_aggregate[state]
  '''
  ,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  count,1.0,1.0,1.0,1,1.0,1,1,1
  mean,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  std,,,,,,,,
  min,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  25%,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  50%,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  75%,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  max,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestSummarizerSequence.test_statistics_single_entity[event]
  "{'length': 1, 'entropy': 0.0, 'vocabulary_size': 1, 'temporal_span': Timedelta('0 days 00:00:00'), 'median_gap': NaT, 'gap_std': NaT, 'vocab_size': 1}"
# ---
# name: TestSummarizerSequence.test_statistics_single_entity[interval]
  "{'length': 1, 'entropy': 0.0, 'vocabulary_size': 1, 'temporal_span': Timedelta('10 days 00:00:00'), 'mean_duration': Timedelta('10 days 00:00:00'), 'median_duration': Timedelta('10 days 00:00:00'), 'duration_std': NaT, 'vocab_size': 1}"
# ---
# name: TestSummarizerSequence.test_statistics_single_entity[state]
  "{'length': 1, 'entropy': 0.0, 'vocabulary_size': 1, 'temporal_span': Timedelta('349 days 00:00:00'), 'n_transitions': 0, 'mean_duration': Timedelta('349 days 00:00:00'), 'median_duration': Timedelta('349 days 00:00:00'), 'duration_std': NaT, 'vocab_size': 1}"
# ---
# name: TestSummarizerSequence.test_statistics_snapshot[event]
  "{'length': 11, 'entropy': 3.095795255000934, 'vocabulary_size': 9, 'temporal_span': Timedelta('339 days 00:00:00'), 'median_gap': Timedelta('30 days 00:00:00'), 'gap_std': Timedelta('28 days 01:45:17.465614296'), 'vocab_size': 9}"
# ---
# name: TestSummarizerSequence.test_statistics_snapshot[interval]
  "{'length': 5, 'entropy': 2.321928094887362, 'vocabulary_size': 5, 'temporal_span': Timedelta('255 days 00:00:00'), 'mean_duration': Timedelta('13 days 14:24:00'), 'median_duration': Timedelta('11 days 00:00:00'), 'duration_std': Timedelta('6 days 15:44:23.238261671'), 'vocab_size': 5}"
# ---
# name: TestSummarizerSequence.test_statistics_snapshot[state]
  "{'length': 2, 'entropy': 1.0, 'vocabulary_size': 2, 'temporal_span': Timedelta('364 days 00:00:00'), 'n_transitions': 1, 'mean_duration': Timedelta('182 days 00:00:00'), 'median_duration': Timedelta('182 days 00:00:00'), 'duration_std': Timedelta('236 days 04:10:04.648768912'), 'vocab_size': 2}"
# ---
# name: TestSummarizerSequence.test_statistics_timestep_sequence[event]
  "{'length': 4.0, 'entropy': 2.0, 'vocabulary_size': 4.0, 'temporal_span': 8.5, 'median_gap': 2.5, 'gap_std': 0.5773502691896257, 'vocab_size': 4}"
# ---
# name: TestSummarizerSequence.test_statistics_timestep_sequence[interval]
  "{'length': 3.0, 'entropy': 1.584962500721156, 'vocabulary_size': 3.0, 'temporal_span': 8.5, 'mean_duration': 2.8333333333333335, 'median_duration': 2.5, 'duration_std': 0.5773502691896257, 'vocab_size': 3}"
# ---
# name: TestSummarizerSequence.test_statistics_timestep_sequence[state]
  "{'length': 3.0, 'entropy': 1.584962500721156, 'vocabulary_size': 3.0, 'temporal_span': 8.5, 'n_transitions': 2.0, 'mean_duration': 2.8333333333333335, 'median_duration': 2.5, 'duration_std': 0.5773502691896257, 'vocab_size': 3}"
# ---
